--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-native-firebase/firestore": "^15.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
+    "@types/react-dom": "^18.0.6",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-splash-screen": "~0.15.1",
@@ -31,10 +34,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "17.0.21",
+    "@types/react": "^18.0.20",
     "@types/react-native": "~0.67.6",
     "react-native-svg-transformer": "^1.0.0",
-    "typescript": "~4.3.5"
+    "typescript": "^4.8.3"
   },
   "private": true
 }
